--- a/about-me.html
+++ b/about-me.html
@@ -58,7 +58,7 @@
     <section>
       <h6 class="about-me-header">My Life and Not Coding</h6>
       <p class="about-me-text">Outside of programming, my main focuses are powerlifting, fantasy sports, real sports, gaming, writing about gaming, and reading fantasy.</p>
-      <p class="about-me-text">I'm hoping to compete in my first meet by the end of 2020. My totals are currently embarrassingly low, but I'm hoping to become somewhat respectable soon.</p>
+      <p class="about-me-text">I'm hoping to compete in my first meet by the end of 2020. Current totals: S/B/D/O: 375/265/425/170 at 148lbs BW. I'm hoping to become somewhat respectable soon.</p>
 
     </section>
 
@@ -67,15 +67,15 @@
         <ul class="currently-ul">
           <li>
             <p class="currently-text">Studying:</p>
-            <p class="currently-response">JQuery, JS, HTML, CSS</p>
+            <p class="currently-response">React, Data Structures</p>
           </li>
           <li>
             <p class="currently-text">Reading:</p>
-            <p class="currently-response">Ship of Smoke and Steel</p>
+            <p class="currently-response">The Alice Network</p>
           </li>
           <li>
               <p class="currently-text">Watching:</p>
-              <p class="currently-response">Kimetsu no Yaiba</p>
+              <p class="currently-response">The Mandalorian</p>
           </li>
           <li>
               <p class="currently-text">Listening:</p>
@@ -83,7 +83,7 @@
           </li>
           <li>
               <p class="currently-text">Playing:</p>
-              <p class="currently-response">Sekiro: Shadows Dies Twice</p>
+              <p class="currently-response">Death Stranding</p>
           </li>
         </ul>
     </section>
