--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,29 @@
             <a class="a-nav-buttons-project" href="https://thinkful-ei-heron.github.io/kei-bookmarks-app/" target="_blank">View Project</a>
       </ul>
     </section>
+
+    <section class="projects">
+      <h2 class="project-title">BookTracker</h2>
+      <img src="images/booktracker-1.png" alt="BookTracker App Sample" class="project-image">
+      <p class="technologies">
+        <i class="devicon-css3-plain-wordmark devicon"></i>
+        <i class="devicon-html5-plain-wordmark devicon"></i>
+        <i class="devicon-react-original-wordmark colored"></i>
+        <i class="devicon-postgresql-plain colored"></i>
+        <i class="devicon-heroku-line-wordmark colored"></i>
+
+      </p>
+      <p class="project-desc">An app designed to track, rate, and review books that you are reading. Keep track of your progress and rate books in a more granular way than a simple star rating. Backend is an API with a database hosted by PostgreSQL, deployed on Heroku. Client is hosted on Zeit. </p>
+      <ul class="ul-view-code-view-app">
+          <li class="li-view-code">
+            <a class="a-nav-buttons-project" href="https://github.com/keisukeisobe/booktracker-client" target="_blank">View Client</a>
+          <li class="li-view-code">
+            <a class="a-nav-buttons-project" href="https://github.com/keisukeisobe/booktracker-server" target="_blank">View API</a>
+          <li class="li-view-app">
+            <a class="a-nav-buttons-project" href="https://booktracker-client.now.sh/" target="_blank">View Project</a>
+      </ul>
+    </section>
+
   </main>
   <footer id="contact">
     <h6 class="about-me-header">Social Links</h6>
