--- a/projects.html
+++ b/projects.html
@@ -72,9 +72,9 @@
       <p class="technologies">
         <i class="devicon-css3-plain-wordmark devicon"></i>
         <i class="devicon-html5-plain-wordmark devicon"></i>
-        <i class="devicon-react-original-wordmark colored"></i>
-        <i class="devicon-postgresql-plain colored"></i>
-        <i class="devicon-heroku-line-wordmark colored"></i>
+        <i class="devicon-react-original-wordmark devicon"></i>
+        <i class="devicon-postgresql-plain devicon"></i>
+        <i class="devicon-heroku-line-wordmark devicon"></i>
 
       </p>
       <p class="project-desc">An app designed to track, rate, and review books that you are reading. Keep track of your progress and rate books in a more granular way than a simple star rating. Backend is an API with a database hosted by PostgreSQL, deployed on Heroku. Client is hosted on Zeit. </p>
