--- a/projects.html
+++ b/projects.html
@@ -29,44 +29,6 @@
     </header>
 
     <section class="projects">
-      <h2 class="project-title">NFL Records Quiz</h2>
-      <img src="images/quiz-app-1.png" alt="Quiz App Sample" class="project-image">
-      <p class="technologies">
-          <i class="devicon-css3-plain-wordmark devicon"></i>
-          <i class="devicon-html5-plain-wordmark devicon"></i>
-          <i class="devicon-javascript-plain devicon"></i>
-          <i class="devicon-jquery-plain-wordmark devicon"></i>
-      </p>
-      <p class="project-desc">A quick and easy NFL records-themed quiz app that presents users with a series of multiple-choice questions and keeps track of the user's score. I built this app to test my JQuery and Javascript skills.</p>
-      <ul class="ul-view-code-view-app">
-          <li class="li-view-code">
-            <a class="a-nav-buttons-project" href="https://github.com/thinkful-ei-heron/Dan_Kei_quizApp" target="_blank">View Code</a>
-          
-          <li class="li-view-app">
-            <a class="a-nav-buttons-project" href="https://thinkful-ei-heron.github.io/Dan_Kei_quizApp/" target="_blank">View Project</a>
-      </ul>
-    </section>
-
-    <section class="projects">
-      <h2 class="project-title">Bookmarks App</h2>
-      <img src="images/bookmarks-app-1.png" alt="Bookmarks App Sample" class="project-image">
-      <p class="technologies">
-        <i class="devicon-css3-plain-wordmark devicon"></i>
-        <i class="devicon-html5-plain-wordmark devicon"></i>
-        <i class="devicon-javascript-plain devicon"></i>
-        <i class="devicon-jquery-plain-wordmark devicon"></i>
-      </p>
-      <p class="project-desc">Bookmarks app connected to Thinkful's Bookmarks API. Users can save bookmarks with a title, rating, and description, edit bookmarks, and expand an individual bookmark to view details. I built this app to practice working with making API calls.</p>
-      <ul class="ul-view-code-view-app">
-          <li class="li-view-code">
-            <a class="a-nav-buttons-project" href="https://github.com/thinkful-ei-heron/kei-bookmarks-app" target="_blank">View Code</a>
-          
-          <li class="li-view-app">
-            <a class="a-nav-buttons-project" href="https://thinkful-ei-heron.github.io/kei-bookmarks-app/" target="_blank">View Project</a>
-      </ul>
-    </section>
-
-    <section class="projects">
       <h2 class="project-title">BookTracker</h2>
       <img src="images/booktracker-1.png" alt="BookTracker App Sample" class="project-image">
       <p class="technologies">
@@ -85,6 +47,50 @@
             <a class="a-nav-buttons-project" href="https://github.com/keisukeisobe/booktracker-server" target="_blank">View API</a>
           <li class="li-view-app">
             <a class="a-nav-buttons-project" href="https://booktracker-client.now.sh/" target="_blank">View Project</a>
+      </ul>
+    </section>
+
+    <section class="projects">
+      <h2 class="project-title">Spaced Repetition (12 Hour Project)</h2>
+      <img src="images/spaced-repetition-1.png" alt="Spaced Repetition App Sample" class="project-image">
+      <p class="technologies">
+        <i class="devicon-css3-plain-wordmark devicon"></i>
+        <i class="devicon-html5-plain-wordmark devicon"></i>
+        <i class="devicon-react-original-wordmark devicon"></i>
+        <i class="devicon-postgresql-plain devicon"></i>
+        <i class="devicon-heroku-line-wordmark devicon"></i>
+
+      </p>
+      <p class="project-desc">An app that uses spaced repetition to help users memorize Spanish vocabulary words. Project was completed in ~12 hours over the course of two days with <a href="https://github.com/JonnyDeates" target="_blank">Jonny Deates</a>. Currently has a limited wordbank.</p>
+      <ul class="ul-view-code-view-app">
+          <li class="li-view-code">
+            <a class="a-nav-buttons-project" href="https://github.com/keisukeisobe/spaced-repetition" target="_blank">View Client</a>
+          <li class="li-view-code">
+            <a class="a-nav-buttons-project" href="https://github.com/keisukeisobe/spaced-repetition-api" target="_blank">View API</a>
+          <li class="li-view-app">
+            <a class="a-nav-buttons-project" href="https://spaced-repetition-kei-jonny.now.sh/" target="_blank">View Project</a>
+      </ul>
+    </section>
+
+    <section class="projects">
+      <h2 class="project-title">Bookmark Organizer</h2>
+      <img src="images/bookmark-organizer-1.png" alt="Spaced Repetition App Sample" class="project-image">
+      <p class="technologies">
+        <i class="devicon-css3-plain-wordmark devicon"></i>
+        <i class="devicon-html5-plain-wordmark devicon"></i>
+        <i class="devicon-react-original-wordmark devicon"></i>
+        <i class="devicon-postgresql-plain devicon"></i>
+        <i class="devicon-heroku-line-wordmark devicon"></i>
+
+      </p>
+      <p class="project-desc">Reorganize, edit, sort, filter, and tag your bookmarks. Compatible with desktop and mobile. Backend is a PostgreSQL database deployed through Heroku, frontend is deployed through Zeit.</p>
+      <ul class="ul-view-code-view-app">
+          <li class="li-view-code">
+            <a class="a-nav-buttons-project" href="https://github.com/thinkful-ei-heron/Group5-Capstone3-Client" target="_blank">View Client</a>
+          <li class="li-view-code">
+            <a class="a-nav-buttons-project" href="https://github.com/thinkful-ei-heron/Group5-Capstone3-Server" target="_blank">View API</a>
+          <li class="li-view-app">
+            <a class="a-nav-buttons-project" href="https://bookmark-organizer.now.sh/" target="_blank">View Project</a>
       </ul>
     </section>
 
