added profile picture

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <h1 class = "header-1">Hi, my name is Kei.</h1>
     </header>
 
+    <img src="images/me.png" alt="Profile Picture">
+
     <section class="headline">
       <h2 class="headline-text">I am a current student in the Engineering Immersion bootcamp at Thinkful (full-stack, full-time).</h2>
       <h2 class="headline-text">I love coding because I love to create tangible solutions to real problems, and the accumulation of skills and knowledge is a forever journey.</h2>
