--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
 
     <section class="projects">
       <h2 class="project-title">Bookmark Organizer</h2>
-      <img src="images/bookmark-organizer-1.png" alt="Spaced Repetition App Sample" class="project-image">
+      <img src="images/bookmark-organizer-1.png" alt="Bookmark Organizer App Sample" class="project-image">
       <p class="technologies">
         <i class="devicon-css3-plain-wordmark devicon"></i>
         <i class="devicon-html5-plain-wordmark devicon"></i>
