--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class = "header-1">Hi, my name is Kei.</h1>
     </header>
 
-    <img src="images/me.png" alt="Profile Picture">
+    <img src="images/me.png" alt="Profile Picture" class="profile">
 
     <section class="headline">
       <h2 class="headline-text">I am a current student in the Engineering Immersion bootcamp at Thinkful (full-stack, full-time).</h2>
