--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>This is me.</p>
 
     <section class="headline">
-      <h2 class="headline-text">I am a current student in the Engineering Immersion bootcamp at Thinkful (full-stack, full-time).</h2>
+      <h2 class="headline-text">I am a recent graduate of Engineering Immersion bootcamp at Thinkful (full-stack, full-time).</h2>
       <h2 class="headline-text">I love coding because I love to create tangible solutions to real problems, and the accumulation of skills and knowledge is a forever journey.</h2>
     </section>
 
