--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section class="about-me-and-projects">
       <a class="about-me-link" href="about-me.html">I'm a former healthcare consultant, and current web/software developer. But that's not all, I have other interests, too! Click here to learn more about me.</a>
-      <a class="projects-link" href="projects.html">Alternatively, if you only care about the capitalistic output I can provide as a cog in the corporate machine, click to see what projects I've done and what I can do for you.</a>
+      <a class="projects-link" href="projects.html">Alternatively, click here to see what projects I've done and what I can do for you.</a>
     </section>  
   </main>
   <footer id="contact">
